# QnA-Web-App

./: .gitignore  README.md
qna-web-app/: Cargo.toml
qna-web-app/handle-errors/: Cargo.toml
qna-web-app/handle-errors/src/: lib.rs
qna-web-app/migrations/: 20240903082125_questions_table.up.sql  20240905083435_create_accounts_table.up.sql
qna-web-app/src/: main.rs  profanity.rs  store.rs
qna-web-app/src/routes/: answer.rs  authentication.rs  mod.rs  question.rs
qna-web-app/src/types/: account.rs  answer.rs  claims.rs  mod.rs  pagination.rs
