workspace = { members = ["handle-errors"] }
[package]
name = "qna-web-app"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
tokio = { version = "1.1.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
handle-errors = { path = "handle-errors" }
