workspace = { members = ["handle-errors"] }
[package]
name = "qna-web-app"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
tokio = { version = "1.1.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
handle-errors = { path = "handle-errors" }
log = "0.4"
log4rs = "1.0.0"
uuid = { version = "1.10.0", features = ["v4"]}
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "migrate", "postgres"] }
dotenv = "0.15"
